# AI-Plugin-Collection

./: LICENSE  README.de.md  README.md  pyproject.toml  requirements.txt
docs/: README.de.md
docs/examples/: usage_api_manager.py  usage_cache_manager.py  usage_cmd_manager.py  usage_conversation_manager.py  usage_helpers.py  usage_service_manager.py  usage_settings.py
src/: __init__.py  conversation_manager.py  decorators.py  main.py  ollama_api_manager.py  ollama_cache.py  ollama_cmd_manager.py  ollama_config.py  ollama_helper.py  ollama_manager.py  ollama_manager_usage_example.py  ollama_service.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  cache_manager.py  decorators.py  helpers.py
src/modules/: __init__.py  api_manager.py  cmd_manager.py  conversation_manager.py  plugin_manager.py  service_manager.py
tests/: test_api_manager.py  test_cache_manager.py  test_cmd_manager.py  test_conversation_manager.py  test_decorators.py  test_helpers.py  test_plugin_manager.py  test_service_manager.py  test_settings.py
